--- a/about/about.html
+++ b/about/about.html
@@ -7,7 +7,7 @@
     <title>HFYV</title>
     <link rel="shortcut icon" href="../assets/hflogo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="gallery.css">
+    <link rel="stylesheet" href="about.css">
     <script src="https://kit.fontawesome.com/e918c11bd2.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,13 +30,13 @@
                         <a class="nav-link" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">How To Book</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link activebtn" href="../Gallery Page/gallery.html">Gallery</a>
+                        <a class="nav-link" href="../Gallery Page/gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../about/about.html">About</a>
+                        <a class="nav-link activebtn" href="#">About</a>
                     </li>
             </div>
         </div>
@@ -61,62 +61,59 @@
         </div>
         </div>
 
-        <section class="container-fluid gallery-bg pb-4">
-            <div class="container">
-                <div class="row m-1">
-                    <div class="col justified-content-center my-md-4 text-center align-item-center">
-                        <h2 class="sub-head font-color">Gallery</h2>
-                    </div>
-                </div>
-    
-                <div class="row align-item-center justify-content-center">
-                    <div class="col-5 btn-group btn-group-md" role="group" aria-label="Basic outlined example">
-                        <button type="button" data-filter="all" class="btn liss btn-outline-primary font-color">All</button>
-                        <button type="button" data-filter="exterior" class="btn liss hov btn-pry">Exterior</button>
-                        <button type="button" data-filter="interior" class="btn liss hov btn-pry">Interior</button>
-                    </div>
-                </div>
 
-                <div class="row align-item-center my-4 p-2">
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox interior">
-                        <img src="../assets/gallery/interior/ref2.png" class="img-fluid bord rounded w-100" alt="interior image">
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox exterior">
-                        <img src="../assets/gallery/exterior/ex4.png" class="img-fluid bord rounded w-100" alt="exterior image">
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox interior">
-                        <img src="../assets/gallery/interior/chap2.png" class="img-fluid bord rounded w-100" alt="interior image">
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox exterior">
-                        <img src="../assets/gallery/exterior/ex5.png" class="img-fluid bord rounded w-100" alt="interior image">
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox exterior">
-                        <img src="../assets/gallery/exterior/genhouse.png" class="img-fluid bord rounded w-100" alt="interior image">
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox exterior">
-                        <img src="../assets/gallery/exterior/sec.png" class="img-fluid bord rounded w-100" alt="interior image">
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox interior">
-                        <img src="../assets/gallery/interior/clinic1.png" class="img-fluid bord rounded w-100" alt="interior image">
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox interior">
-                        <img src="../assets/gallery/interior/ref1.png" class="img-fluid bord rounded w-100" alt="interior image">
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox exterior">
-                        <img src="../assets/gallery/exterior/sport.png" class="img-fluid bord rounded w-100" alt="exterior image">
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox exterior">
-                        <img src="../assets/gallery/exterior/solar1.png" class="img-fluid bord rounded w-100" alt="interior image">
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox interior">
-                        <img src="../assets/gallery/exterior/sec.png" class="img-fluid bord rounded w-100" alt="interior image">
-                    </div>
-                </div>
-                
+    <!-- About HF -->
+    <div class="outer">
 
-        </section>
+        <div class="border-1">
+            <h3>LOCATION:</h3>
 
+            <p>Amansea in Awka North LGA Anambra State.</p>
 
+            <h3>STRUCTURE AND FEATURES:</h3>
+
+            <p> Four gigantic twin hostels with private kitchens, laundry, water heaters and study rooms; chapel; a
+                cyber cafe; a clinic; a supermarket; hair saloon; General kitchen; canteen and refectory; a generator
+                house with solar panels; two 740ft scientific boreholes for water; police post for security; football
+                pitch; lawn tennis courts; basket and volleyball courts</p>
+
+            <h3>CAPACITY AND LOGISTICS:</h3>
+
+            <p>The hostel has 504 rooms in all. 492 are fully occupied by students both males and females though
+                separately. The hostel has a total of 984 students from every part of Nigeria and different religious
+                denominations. It is managed by three priests (The Rector, Spiritual Director and Bursar) and six
+                religious sisters.</p>
+
+            <h3>INAUGURATION:</h3>
+
+            <p>14th September 2009.</p>
+
+            <h3>VISION:</h3>
+
+            <p>Formation of future leaders through selfless and exemplary services.</p>
+
+            <h3>MISSION:</h3>
+
+            <p>Provision of a very conducive and serene atmosphere for studies and to get the best out of the youths in
+                order to arm them to face future challenges, realize their dreams and help in transforming our society.
+            </p>
+
+            <h3>FEATS SO FAR:</h3>
+
+            <p>Overall best hostel in cleanliness and discipline 2009 till date; overall best in academics and sports.
+            </p>
+
+            <h3>CONTACTS:</h3>
+            <ul>
+                <li> Fr. Obielosi Dominic (The Rector): 08032776139.</li>
+
+                <li>Fr. Ogbuowelu Emmanuel (The Bursar): 08167676299.</li>
+
+                <li>Sis. M. Sarah Edeoga (The Chief Receptionist): 08064689745.</li>
+            </ul>
+        </div>
+
+    </div>
 
 
     <!--     Footer      -->
