--- a/faq/faq.html
+++ b/faq/faq.html
@@ -7,7 +7,7 @@
     <title>HFYV</title>
     <link rel="shortcut icon" href="../assets/hflogo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="gallery.css">
+    <link rel="stylesheet" href="faq.css">
     <script src="https://kit.fontawesome.com/e918c11bd2.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,10 +30,10 @@
                         <a class="nav-link" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">How To Book</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link activebtn" href="../Gallery Page/gallery.html">Gallery</a>
+                        <a class="nav-link" href="../Gallery Page/gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">FAQ</a>
+                        <a class="nav-link activebtn" href="#">FAQ</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../about/about.html">About</a>
@@ -60,63 +60,6 @@
             </div>
         </div>
         </div>
-
-        <section class="container-fluid gallery-bg pb-4">
-            <div class="container">
-                <div class="row m-1">
-                    <div class="col justified-content-center my-md-4 text-center align-item-center">
-                        <h2 class="sub-head font-color">Gallery</h2>
-                    </div>
-                </div>
-    
-                <div class="row align-item-center justify-content-center">
-                    <div class="col-5 btn-group btn-group-md" role="group" aria-label="Basic outlined example">
-                        <button type="button" data-filter="all" class="btn liss btn-outline-primary font-color">All</button>
-                        <button type="button" data-filter="exterior" class="btn liss hov btn-pry">Exterior</button>
-                        <button type="button" data-filter="interior" class="btn liss hov btn-pry">Interior</button>
-                    </div>
-                </div>
-
-                <div class="row align-item-center my-4 p-2">
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox interior">
-                        <img src="../assets/gallery/interior/ref2.png" class="img-fluid bord rounded w-100" alt="interior image">
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox exterior">
-                        <img src="../assets/gallery/exterior/ex4.png" class="img-fluid bord rounded w-100" alt="exterior image">
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox interior">
-                        <img src="../assets/gallery/interior/chap2.png" class="img-fluid bord rounded w-100" alt="interior image">
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox exterior">
-                        <img src="../assets/gallery/exterior/ex5.png" class="img-fluid bord rounded w-100" alt="interior image">
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox exterior">
-                        <img src="../assets/gallery/exterior/genhouse.png" class="img-fluid bord rounded w-100" alt="interior image">
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox exterior">
-                        <img src="../assets/gallery/exterior/sec.png" class="img-fluid bord rounded w-100" alt="interior image">
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox interior">
-                        <img src="../assets/gallery/interior/clinic1.png" class="img-fluid bord rounded w-100" alt="interior image">
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox interior">
-                        <img src="../assets/gallery/interior/ref1.png" class="img-fluid bord rounded w-100" alt="interior image">
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox exterior">
-                        <img src="../assets/gallery/exterior/sport.png" class="img-fluid bord rounded w-100" alt="exterior image">
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox exterior">
-                        <img src="../assets/gallery/exterior/solar1.png" class="img-fluid bord rounded w-100" alt="interior image">
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3 my-2 itembox interior">
-                        <img src="../assets/gallery/exterior/sec.png" class="img-fluid bord rounded w-100" alt="interior image">
-                    </div>
-                </div>
-                
-
-        </section>
-
-
 
 
     <!--     Footer      -->
