--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
                         <a class="nav-link" href="#">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="./about/about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="./login page/login.html" class="btn px-2 mx-2 nav-link btn-pri">Login</a>
                     </li>
             </div>
         </div>
@@ -68,10 +71,10 @@
                 <h1 class="text-light my-3">Welcome</h1>
                 <h3 class="text-light my-3">To</h3>
                 <h1 class="text-light my-4">Holy Family Youth Village</h1>
-                <div class="row justify-content-center my-3 p-1">
+                <!-- <div class="row justify-content-center my-3 p-1">
                     <a href="./login page/login.html" class="btn btn-pri wow mx-3 shadow col-4">Login</a>
                     <a href="./register page/register.html" class="btn btn-sec  wow mx-3 shadow col-4">Register</a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
